# RadarProcessor

./: CMakeLists.txt  README.md  conanfile.py  run_debug.bat  run_release.bat
architecture/: architecture.md
assets/inireader/: IniFileParser.cpp  IniFileParser.h  ini.c  ini.h
data/: SensorDriver.ini  Vehicle.ini  VehicleProfile.ini
radar/include/config/: VehicleProfile.hpp
radar/include/engine/: RadarEngine.hpp  RadarPlaybackEngine.hpp
radar/include/logging/: Logger.hpp
radar/include/mapping/: FusedRadarMapping.hpp  RadarVirtualSensorMapping.hpp
radar/include/processing/: RadarPlayback.hpp  RadarTrack.hpp
radar/include/sensors/: BaseRadarSensor.hpp  MultiRadarSensor.hpp  OfflineRadarDataReader.hpp  OfflineRadarSensor.hpp  RadarFactory.hpp  RadarFactoryHelpers.hpp  TextRadarSensor.hpp
radar/src/config/: VehicleProfile.cpp
radar/src/engine/: RadarEngine.cpp  RadarPlaybackEngine.cpp
radar/src/logging/: Logger.cpp
radar/src/mapping/: FusedRadarMapping.cpp  RadarVirtualSensorMapping.cpp
radar/src/processing/: RadarPlayback.cpp
radar/src/sensors/: MultiRadarSensor.cpp  OfflineRadarDataReader.cpp  OfflineRadarSensor.cpp  RadarFactory.cpp  RadarFactoryHelpers.cpp  TextRadarSensor.cpp
radar_core/: odometry_estimator.cpp  odometry_estimator.hpp  processing_common.hpp  processing_pipeline.cpp  processing_pipeline.hpp
shaders/: point.fs  point.vs
splinter/src/: bsplinebuilder.cpp
test/: main.cpp  radar_core_odometry_test.cpp  radar_core_pipeline_test.cpp  radar_engine_test.cpp  radar_mapping_test.cpp  radar_playback_test.cpp  radar_sensor_test.cpp  radar_vehicle_profile_test.cpp  radar_visualizer_stub.cpp  radarfactory_test.cpp  test_helpers.hpp  utility_math_utils_test.cpp  utility_vehicle_config_test.cpp
utility/: math_utils.hpp  radar_types.hpp  vehicle_config.cpp  vehicle_config.hpp
visualization/: RadarVisualizer.cpp  RadarVisualizer.hpp  Shader.cpp  Shader.hpp  imgui.ini
